# spotify-pedalboard-control

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: app.html  style.css
src-python/: README.md  pyproject.toml
src-python/src/: main.py  pedal_board_generator.py
src-python/tests/: test_pedal_board_generator.py
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/effector/: model.rs
src-tauri/src/pedal/: model.rs
src/lib/: constant.ts  pedal-type.ts  type.ts
src/lib/component/form/: ChorusForm.svelte  ChorusParameterForm.svelte  CompressorForm.svelte  CompressorParameterForm.svelte  DelayForm.svelte  DelayParameterForm.svelte  DistortionForm.svelte  DistortionParameterForm.svelte  LimiterForm.svelte  PhaserForm.svelte  PhaserParameterForm.svelte  ReverbForm.svelte  ReverbParameterForm.svelte
src/lib/component/form/control/: KindControl.svelte  ParameterControl.svelte  TimeControl.svelte
src/lib/component/icon/: GuitarIcon.svelte  HeadphoneIcon.svelte  PedalIcon.svelte  PlayIcon.svelte  PlusIcon.svelte  SaveIcon.svelte
src/lib/store/: pedal.ts
src/lib/util/: dialog.ts  pedalboard.ts
src/lib/util/dialog/: file.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/effects/[effect]/: +page.svelte  +page.ts
tests/: README.md
tests/routes/: page.test.ts
