[tool.poetry]
name = "src-python"
version = "0.1.0"
description = ""
authors = ["meuzi8122 <kagiakete1234@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pedalboard = "^0.9.5"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pyinstaller = "^6.6.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py310', 'py312']